[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "teamvault"
description = "Keep your passwords behind the firewall"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Seibert Group GmbH" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Security",
]
keywords = ["password", "safe", "manager", "sharing"]
dependencies = [
    "cryptography~=42.0",
    "django-auth-ldap~=4.6",
    "django-bootstrap5==23.4",
    "django-filter==23.5",
    "django-htmx~=1.17",
    "django-webpack-loader~=3.0",
    "django~=5.1.8",
    "djangorestframework~=3.14",
    "gunicorn~=21.2",
    "hashids~=1.3",
    "pyotp~=2.9",
    "huey~=2.5",
    "psycopg~=3.2",
    "pytz~=2024.2",
    "requests~=2.32",
    "social-auth-app-django~=5.4",
    "whitenoise[brotli]~=6.6",
]

# dynamic = ["version"] - Currently unsupported by uv_build
version = '1.0.0rc6'  # Also change in teamvault/__version__.py

[dependency-groups]
dev = [
    "django-stubs~=5.1",
    "djangorestframework-stubs~=3.15",
    "faker",
]

[project.scripts]
teamvault = "teamvault.cli:main"

[project.urls]
Source = "https://github.com/seibert-media/teamvault"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""
source-include = [
    "CHANGELOG.md",
    "MANIFEST.in",
]

[tool.uv.sources]
teamvault = { workspace = true }
