[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"

[project]
name = "teamvault"
description = "Keep your passwords behind the firewall"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Seibert Group GmbH" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Security",
]
keywords = ["password", "safe", "manager", "sharing"]
dependencies = [
    "cryptography~=45.0.2",
    "django-auth-ldap~=5.2.0",
    "django-bootstrap5==25.1",
    "django-filter==25.1",
    "django-htmx~=1.23.0",
    "django-test-migrations>=1.5.0",
    "django-webpack-loader~=3.2.0",
    "django~=5.2.1",
    "djangorestframework~=3.16.0",
    "gunicorn~=23.0.0",
    "hashids~=1.3.1",
    "pyotp~=2.9",
    "huey~=2.5.3",
    "psycopg~=3.2.9",
    "pytz~=2025.2",
    "requests~=2.32",
    "social-auth-app-django~=5.4.3",
    "whitenoise[brotli]~=6.9.0",
]

# dynamic = ["version"] - Currently unsupported by uv_build
version = '0.10.1'  # Also change in teamvault/__version__.py

[dependency-groups]
dev = [
    "django-stubs~=5.2.0",
    "djangorestframework-stubs~=3.16.0",
    "faker",
]

[project.scripts]
teamvault = "teamvault.cli:main"

[project.urls]
Source = "https://github.com/seibert-media/teamvault"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""
source-include = [
    "CHANGELOG.md",
    "MANIFEST.in",
]

[tool.uv.sources]
teamvault = { workspace = true }
